Tetris Enhanced is Completed

--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -76,7 +76,7 @@
             represent arrow keys and are there for mobile users.
           </p>
 
-          <img class="project-img" src="/Pictures/snakegame-screenshot.png" alt="Snake Game Image">
+          <img class="project-img" src="/Pictures/snakegame-screenshot.png" alt="Snake Game Play Image">
 
           <!-- Game Status Label -->
           <label class="status-label">Game status:</label>
@@ -106,12 +106,12 @@
             represent arrow keys and are there for mobile users.
           </p>
 
-          <img class="project-img" src="/Pictures/360_F_315929483_O3zCF74h869pep9L2WMi6cWS2bhO2AjH.jpg" alt="Tetris Image">
+          <img class="project-img" src="/Pictures/tetris-screenshot.png" alt="Tetris Game Play Image">
 
            <!-- Game Status Label -->
            <label class="status-label">Game status:</label>
            <a href="/Projects/TetrisEnhanced/Html/menu.html">
-             <button class="btn-warning btn-lg">Beta Version Available 👷</button>
+             <button class="btn-success btn-lg">Completed ✅</button>
            </a>
            
         </li>
