--- a/Projects/SnakeGameEnchanced/Html/achievements.html
+++ b/Projects/SnakeGameEnchanced/Html/achievements.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hall of Achivements👑</h1>
+        <h1>Hall of Achievements👑</h1>
         <div class="achievement-container">
             <img src="/Projects/SnakeGameEnchanced/Images/apple120.png" id="firstApple" title="Eat your first apple">
             <img src="/Projects/SnakeGameEnchanced/Images/bronzeapple120.png" id="bronzeApple" title="Eat 5 apples in 1 run">
