--- a/Projects/TetrisEnhanced/Html/menu.html
+++ b/Projects/TetrisEnhanced/Html/menu.html
@@ -1,4 +1,6 @@
 <!-- Bogdan Gura -->
+<!-- Date Started: 11/2/2023 -->
+<!-- Date Finished: 1/9/2024 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -42,7 +44,7 @@
                     <button id="achievementBtn" class="in-development"><span class="glowing-text-in-development">Achievements</span ></button>
                 </a>
 
-                <button class="in-development" id="clearBtn"><span class="glowing-text-in-development">Clear Save</span ></button>
+                <button class="clear-save" id="clearBtn"><span class="glowing-text-clear-save">Clear Save</span ></button>
                     <!-- Qutting leads to my portfolio website
                 to the projects section-->
                 <a href="https://bogdangura.github.io/HTML/projects.html">
