--- a/Projects/TetrisEnhanced/Html/tetris-solo.html
+++ b/Projects/TetrisEnhanced/Html/tetris-solo.html
@@ -1,11 +1,10 @@
 <!-- Bogdan Gura -->
-<!-- Date Started: 11/2/2023 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="">
+    <link rel="icon" href="/Projects/TetrisEnhanced/Images/tetris-single.png">
     <title>Tetris</title>
     <!-- BootStrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
