--- a/Projects/TetrisEnhanced/Html/tetris-vs-ai.html
+++ b/Projects/TetrisEnhanced/Html/tetris-vs-ai.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="">
+    <link rel="icon" href="/Projects/TetrisEnhanced/Images/tetris-ai.jpeg">
     <title>VS A.I</title>
     <!-- BootStrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -31,7 +31,7 @@
                 <div id="next-tetromino-screen"></div>
 
                 <!-- Player name -->
-                <h3>Player 1</h3>
+                <h3 id="username"></h3>
                 <br>
                 <!-- Make a smooth counter -->
                 <h4>Points: <span id="points">0</span></h4>
