--- a/Projects/TetrisEnhanced/Html/achievements.html
+++ b/Projects/TetrisEnhanced/Html/achievements.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tetris Achievement Hall</title>
-    <link rel="icon" href="">
+    <link rel="icon" href="/Projects/SnakeGameEnchanced/Images/trophy.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <!-- Personal CSS -->
@@ -12,39 +12,39 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hall of Achivements👑</h1>
-        <h2>Thanks to <strong>Lucas Rosenberger</strong> for giving me an idea for Blockhead achievement series</h2>
+        <h1>Hall of Achievements👑</h1>
+        <h3>Thanks to <span id="contributor">Lucas Rosenberger</span> for giving me an idea for Blockhead achievement series.</h3>
         <div class="achievement-container">
-            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing.png" title="">
-            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (1).png" title="">
-            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (2).png" title="">
-            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (5).png" title="">
-            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (3).png" title="">
-            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (4).png" title="">
-            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (6).png" title="">
-            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (7).png" title="">
-            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (8).png" title="">
-            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (9).png" title="">
-            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (10).png" title="">
-            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (11).png" title="">
-            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (12).png" title="">
-            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (13).png" title="">
-            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (14).png" title="">
-            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (22).png" title="">
-            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (23).png" title="">
-            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (24).png" title="">
-            <img class="ai-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (20).png" title="">
-            <img class="ai-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (21).png" title="">
-            <img class="name-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (15).png" title="">
-            <img class="name-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (16).png" title="">
-            <img class="name-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (17).png" title="">
-            <img class="name-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (18).png" title="">
-            <img class="name-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (28).png" title="">
-            <img class="name-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (30).png" title="">
-            <img class="name-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (19).png" title="">
-            <img class="clear-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (25).png" title="">
-            <img class="clear-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (26).png" title="">
-            <img class="clear-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (27).png" title="">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing.png" title="Start you first session">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (1).png" title="Place 100 tetrominoes">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (2).png" title="Place 250 tetrominoes">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (5).png" title="Place 500 tetrominoes">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (3).png" title="Place 1000 tetrominoes">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (4).png" title="Clear your first line">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (6).png" title="Clear 15 lines">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (7).png" title="Clear 30 lines">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (8).png" title="Clear 45 lines">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (9).png" title="Clear 60 lines">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (10).png" title="Earn cumulatively 1,000 points">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (11).png" title="Earn cumulatively 10,000 points">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (12).png" title="Earn cumulatively 50,000 points">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (13).png" title="Earn cumulatively 100,000 points">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (14).png" title="Earn cumulatively 250,000 points">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (22).png" title="Clear 2 lines at once">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (23).png" title="Clear 3 lines at once">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (24).png" title="Clear 4 lines at once">
+            <img class="ai-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (20).png" title="Lose to AI">
+            <img class="ai-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (21).png" title="Defeat AI">
+            <img class="name-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (15).png" title="Enter 'HarHarHar' as your username">
+            <img class="name-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (16).png" title="Enter 'Lucas' as your username">
+            <img class="name-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (17).png" title="Enter 'Aaron' as your username">
+            <img class="name-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (18).png" title="Enter 'Bogdan' as your username">
+            <img class="name-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (28).png" title="Enter 'Back End' as your username">
+            <img class="name-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (30).png" title="Enter 'Java Script' as your username">
+            <img class="name-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (19).png" title="Enter 'Python' as your username">
+            <img class="clear-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (25).png" title="Clear your save once">
+            <img class="clear-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (26).png" title="Clear your save twice">
+            <img class="clear-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (27).png" title="Clear your save thrice">
         </div>
         <a href="/Projects/TetrisEnhanced/Html/menu.html">
             <button>Back</button>
