First upgrade added the store

--- a/Projects/FullStackClicker/Html/clicker.html
+++ b/Projects/FullStackClicker/Html/clicker.html
@@ -23,11 +23,11 @@
             <h2>XPPS: <span id="xp-per-second-field" class="xp">0</span></h2>
         </div>
 
-        <div class="timer-container"></div>
-
-        <div class="store-container">
+        <div class="timer-container">
             <p id="countdown"></p>
         </div>
+
+        <div class="store-container"></div>
 
         <!-- Actions menu is where you can activate 
         Upgrades and buy assets -->
