Tooltip progress saved

--- a/Projects/FullStackClicker/Html/clicker.html
+++ b/Projects/FullStackClicker/Html/clicker.html
@@ -38,12 +38,14 @@
     <!-- Audio elements -->
     <audio id="clickSoundXP">
         <source src="/Projects/FullStackClicker/Sound Effects/mixkit-cool-interface-click-tone-2568.wav" type="audio/mp3">
-        Your browser does not support the audio element.
     </audio>
     
     <audio id="clickSoundMoney">
         <source src="/Projects/FullStackClicker/Sound Effects/collectcoin-6075.mp3" type="audio/mp3">
-        Your browser does not support the audio element.
+    </audio>
+
+    <audio id="clickSoundPurchase">
+        <source src="/Projects/FullStackClicker/Sound Effects/cash-register-purchase-87313.mp3" type="audio/mp3">
     </audio>
 
 <script src="/Projects/FullStackClicker/Scripts/clicker.js"></script>
