Game layout redesigned

--- a/Projects/FullStackClicker/Html/clicker.html
+++ b/Projects/FullStackClicker/Html/clicker.html
@@ -31,8 +31,10 @@
 
         <!-- Actions menu is where you can activate 
         Upgrades and buy assets -->
-        <div class="actions-menu-container"></div>
         <div class="view-assets-container"></div>
+        <div class="actions-menu-container"></div>
+        <div class="info-container"></div>
+        
     </div>
 
     <!-- Audio elements -->
