Show functins revorked and progress button added.

--- a/Projects/FullStackClicker/Html/clicker.html
+++ b/Projects/FullStackClicker/Html/clicker.html
@@ -16,6 +16,9 @@
             <h1>Money: <span id="moneyScoreElement" class="money">0</span></h1>
             <h2>MPS: <span id="money-per-second-field" class="money">0</span></h2>
             <button id="openMenuBtn">Menu</button>
+
+            <p id="saved-text">Progress Saved</p>
+            <button id="saved-btn">Save Progress</button>
         </div>
 
         <div class="xp-img-container">
@@ -44,7 +47,9 @@
     <!-- Heading -->
     <h1>Menu <button id="closeMenuBtn"><span id="X">X</span></button></h1> 
 
-        <button id="quitGameBtn1">Quit</button>
+        <a href="menu.html">
+            <button>Quit</button>
+        </a>
     
     </dialog>
 
@@ -53,7 +58,11 @@
         <h1>You Lost</h1> 
         <!-- When Quit button is clicked it send the 
         player to the menu -->
-        <button id="quitGameBtn2">Quit</button>
+
+        <a href="menu.html">
+            <button>Quit</button>
+        </a>
+        
     </dialog>
 
     <!-- Audio elements -->
