Full Stack Clicker done (No styling)

--- a/Projects/FullStackClicker/Html/clicker.html
+++ b/Projects/FullStackClicker/Html/clicker.html
@@ -53,6 +53,18 @@
     
     </dialog>
 
+     <!-- Pop up lost -->
+     <dialog id="popup-won">
+        <h1>You Won</h1> 
+        <!-- When Quit button is clicked it send the 
+        player to the menu -->
+
+        <a href="menu.html">
+            <button>Quit</button>
+        </a>
+        
+    </dialog>
+
     <!-- Pop up lost -->
     <dialog id="popup-lost">
         <h1>You Lost</h1> 
