--- a/Projects/FullStackClicker/Html/difficulty.html
+++ b/Projects/FullStackClicker/Html/difficulty.html
@@ -11,17 +11,23 @@
         <h1>Select Difficulty</h1>
 
         <!-- Difficulty Selectors -->
-        <a href="clicker.html?difficulty=easy">
-            <button>Frontend Explorer</button>
+        <a onclick="clearLocalStorageEasy()">
+            <button class="easy-btn">Frontend Explorer</button>
         </a>
         
-        <a href="clicker.html?difficulty=medium">
-            <button>Backend Enthusiast</button>
+        <a onclick="clearLocalStorageMid()">
+            <button class="mid-btn">Backend Enthusiast</button>
         </a>
 
-        <a href="clicker.html?difficulty=hard">
-            <button>Full Stack Master</button>
+        <a onclick="clearLocalStorageHard()">
+            <button class="hard-btn">Full Stack Master</button>
+        </a>
+
+        <a href="menu.html">
+            <button>Back</button>
         </a>
     </div>
+
+<script src="/Projects/FullStackClicker/Scripts/difficulty.js"></script>
 </body>
 </html>
