Finish date updated for Full Stack Clicker

--- a/Projects/FullStackClicker/Html/clicker.html
+++ b/Projects/FullStackClicker/Html/clicker.html
@@ -1,5 +1,5 @@
 <!-- Started: 1/26/2024 -->
-<!-- Finished:  -->
+<!-- Finished: 2/7/2024 -->
 <!-- Bogdan Gura -->
 <!DOCTYPE html>
 <html lang="en">
