--- a/HTML/template.html
+++ b/HTML/template.html
@@ -27,6 +27,7 @@
       <!-- Navbar content -->
        <ul class="nav navbar-nav text-white">
         <li class=""><a href="/index.html">Home</a></li>
+        <li class=""><a href="/HTML\js-warriors.html">Java Script</a></li>
         <li class=""><a href="/HTML/projects.html">Projects</a></li>
         <li class=""><a href="/HTML/credentials.html">Credentials</a></li>
         <li class=""><a href="/HTML/about-me.html">About Me</a></li>
