--- a/HTML/js-warriors.html
+++ b/HTML/js-warriors.html
@@ -51,11 +51,19 @@
           <td>
             <a href="\JS Warriors\js01\chapter\js01.html">Chapter Project (Imbedded JS)</a>
           </td>
+          <!-- Chapter 2 project -->
+          <td>
+            <a href="\JS Warriors\js02\chapter\js02.html">Chapter 2 Project</a>
+          </td>
         </tr>
 
         <tr>
           <td>
             <a href="\JS Warriors\js01\chapter\js01_txt.html">Chapter Project (Linked JS)</a>
+          </td>
+          <!-- Chapter 2 -->
+          <td>
+            <a href="\JS Warriors\js02\project01\project02-01_txt.html">Project 1</a>
           </td>
         </tr>
 
@@ -63,17 +71,29 @@
           <td>
             <a href="\JS Warriors\js01\project01\project01-01.html">Project 1</a>
           </td>
+          <!-- Chapter 2 -->
+          <td>
+            <a href="\JS Warriors\js02\project02\project02-02_txt.html">Project 2</a>
+          </td>
         </tr>
 
         <tr>
           <td>
             <a href="\JS Warriors\js01\project02\project01-02.html">Project 2</a>
           </td>
+          <!-- Chapter 2 -->
+          <td>
+            <a href="\JS Warriors\js02\project03\project02-03_txt.html">Project 3</a>
+          </td>
         </tr>
 
         <tr>
           <td>
             <a href="\JS Warriors\js01\project03\project01-03.html">Project 3</a>
+          </td>
+          <!-- Chapter 2 -->
+          <td>
+            <a href="\JS Warriors\js02\project04\project02-04_txt.html">Project 4</a>
           </td>
         </tr>
 
