Chapter 3 projects added

--- a/HTML/js-warriors.html
+++ b/HTML/js-warriors.html
@@ -55,6 +55,10 @@
           <td>
             <a href="\JS Warriors\js02\chapter\js02.html">Chapter 2 Project</a>
           </td>
+          <!-- Chapter 3 -->
+          <td>
+            <a href="\JS Warriors\js03\chapter\js03.html">Chapter 3 Project</a>
+          </td>
         </tr>
 
         <tr>
@@ -64,6 +68,10 @@
           <!-- Chapter 2 -->
           <td>
             <a href="\JS Warriors\js02\project01\project02-01_txt.html">Project 1</a>
+          </td>
+          <!-- Chapter 3 -->
+          <td>
+            <a href="\JS Warriors\js03\project01\project03-01_txt.html">Project 1</a>
           </td>
         </tr>
 
@@ -75,6 +83,10 @@
           <td>
             <a href="\JS Warriors\js02\project02\project02-02_txt.html">Project 2</a>
           </td>
+          <!-- Chapter 3 -->
+          <td>
+            <a href="\JS Warriors\js03\project02\project03-02_txt.html">Project 2</a>
+          </td>
         </tr>
 
         <tr>
@@ -85,6 +97,10 @@
           <td>
             <a href="\JS Warriors\js02\project03\project02-03_txt.html">Project 3</a>
           </td>
+          <!-- Chapter 3 -->
+          <td>
+            <a href="\JS Warriors\js03\project03\project03-03_txt.html">Project 3</a>
+          </td>
         </tr>
 
         <tr>
@@ -94,6 +110,10 @@
           <!-- Chapter 2 -->
           <td>
             <a href="\JS Warriors\js02\project04\project02-04_txt.html">Project 4</a>
+          </td>
+          <!-- Chapter 3 -->
+          <td>
+            <a href="\JS Warriors\js03\project04\project03-04_txt.html">Project 4</a>
           </td>
         </tr>
 
