--- a/HTML/js-warriors.html
+++ b/HTML/js-warriors.html
@@ -49,11 +49,11 @@
 
         <tr>
           <td>
-            <a href="\JS Warriors\js01\chapter\js01.html">Chapter Project (Imbedded JS)</a>
+            <a href="\JS Warriors\js01\chapter\js01.html">Chapter Project (Imbedded JS) &nbsp;</a>
           </td>
           <!-- Chapter 2 project -->
           <td>
-            <a href="\JS Warriors\js02\chapter\js02.html">Chapter 2 Project</a>
+            <a href="\JS Warriors\js02\chapter\js02.html">Chapter 2 Project &nbsp;</a>
           </td>
           <!-- Chapter 3 -->
           <td>
