Chapter 4 projects added

--- a/HTML/js-warriors.html
+++ b/HTML/js-warriors.html
@@ -57,7 +57,11 @@
           </td>
           <!-- Chapter 3 -->
           <td>
-            <a href="\JS Warriors\js03\chapter\js03.html">Chapter 3 Project</a>
+            <a href="\JS Warriors\js03\chapter\js03.html">Chapter 3 Project&nbsp;</a>
+          </td>
+          <!-- Chapter 4 -->
+          <td>
+            <a href="\JS Warriors\js04\chapter\js04_txt.html">Chapter 4 Project&nbsp;</a>
           </td>
         </tr>
 
@@ -73,6 +77,10 @@
           <td>
             <a href="\JS Warriors\js03\project01\project03-01_txt.html">Project 1</a>
           </td>
+          <!-- Chapter 4 -->
+          <td>
+            <a href="\JS Warriors\js04\project01\project04-01_txt.html">Project 1</a>
+          </td>
         </tr>
 
         <tr>
@@ -86,6 +94,10 @@
           <!-- Chapter 3 -->
           <td>
             <a href="\JS Warriors\js03\project02\project03-02_txt.html">Project 2</a>
+          </td>
+          <!-- Chapter 4 -->
+          <td>
+            <a href="\JS Warriors\js04\project02\project04-02_txt.html">Project 2</a>
           </td>
         </tr>
 
@@ -101,6 +113,10 @@
           <td>
             <a href="\JS Warriors\js03\project03\project03-03_txt.html">Project 3</a>
           </td>
+          <!-- Chapter 4 -->
+          <td>
+            <a href="\JS Warriors\js04\project03\project04-03_txt.html">Project 3</a>
+          </td>
         </tr>
 
         <tr>
@@ -114,6 +130,10 @@
           <!-- Chapter 3 -->
           <td>
             <a href="\JS Warriors\js03\project04\project03-04_txt.html">Project 4</a>
+          </td>
+          <!-- Chapter 4 -->
+          <td>
+            <a href="\JS Warriors\js04\project04\project04-04_txt.html">Project 4</a>
           </td>
         </tr>
 
