--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
         <div class="project">
           <h3>Snake Game Enhanced</h3>
           <iframe src="https://my.spline.design/apple-bc201c5d0cb4dc29319f306549194bd1/"></iframe>
-          <a href="/html/projects.html#snakeGame" tabindex="2" aria-label="A link that leads to an article about my Snake Game Project"></a>>Check out Snake Game Enhanced</a>
+          <a href="/html/projects.html#snakeGame" tabindex="2" aria-label="A link that leads to an article about my Snake Game Project">Check out Snake Game Enhanced</a>
         </div>
 
         <div class="project" id="clickerProjectContainer">
           <h3>Full Stack Clicker</h3>
           <iframe src="https://my.spline.design/mousecursor-40d9fce32f0ad2d9f336894c7a107802/" id="clickerProject"></iframe>
-          <a href="/html/projects.html#fullStackClicker" tabindex="3" aria-label="A link that leads to an article about my Clicker Game Project"></a>>Check out Full Stack Clicker</a>
+          <a href="/html/projects.html#fullStackClicker" tabindex="3" aria-label="A link that leads to an article about my Clicker Game Project">Check out Full Stack Clicker</a>
         </div>
       </div>
       
