--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=0.9">
     <title>Home</title>
     <link rel="icon" href="/images/Favicon-32x32.png" type="image/x-icon" sizes="16x16 32x32">
     <!-- Bootstrap -->
@@ -58,7 +58,7 @@
       
       <h2>Check out some of my Projects </h2>
 
-      <div id="projectsContainer">
+      <div class="index-projects-container" id="projectsContainer">
 
         <div class="project" id="tetrisProjectContainer">
           <h3>Tetris Enhanced</h3>
