Additional info added regarding my github and fiverr accounts

--- a/html/about-me.html
+++ b/html/about-me.html
@@ -58,6 +58,12 @@
           As for my spare time when I'm not coding I'm usually really into fitness and weight lifting.
           Now I'm preparing to go into Kent State University in August to pursue my major in Emerging Media and Technology which I'm really excited about.
         </p>
+
+        <p>You can also find me here: 
+          <a href="https://github.com/BogdanGura?ocid=AIDcmmcwpj1e5v_SEM__k_EAIaIQobChMIxI3oiOn8hgMVO1n_AR3BGwZbEAAYASAAEgKtRvD_BwE_k_">Github</a>,
+          <a href="https://www.fiverr.com/primarisgura?up_rollout=true">Fiverr</a>,
+           bgura5002@gmail.com
+        </p>
       </div>
 
       
