--- a/html/projects.html
+++ b/html/projects.html
@@ -100,7 +100,7 @@
             Bogdan’s Academy is a learning platform where you can learn coding with the help of articles and quizzes. 
             The system would also allow me and my classmate to develop Bogdan’s Academy for the BPA 2024 Virtual Event Competition. 
             We have received 7th place in the competition on the national level for your work. 
-            You can learn more about Bogdan’s Academy from our <a href="https://docs.google.com/presentation/d/1hWg9sywRha-_pVIDpGCiJU-Ns_awpu-SCrkaxuS85oM/edit#slide=id.p" target="_blank">slideshow</a> or see it for yourself by clicking the "Visit" button below.
+            You can learn more about Bogdan’s Academy from our <a href="/documents/Bogdan's Academy Presentation.pdf" target="_blank">slideshow</a> or see it for yourself by clicking the "Visit" button below.
           </p>
 
           <!-- Second Header -->
